# tms570ls3137-clion-led-blinky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TI-ARM-CGT-compiler.yaml  led-blinky.dil  led-blinky.hcg  ti_tmdx570ls31usb.cfg
include/: system.h
source/: notification.c  sys_main.c
targetConfigs/: TMS570LS3137.ccxml  generated.ufsettings
